<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <!--gridlayout with two columns-->
    <!--scrollview : container for main content-->


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="4dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="10dp"
        android:useDefaultMargins="false">

        <TextView
            style="@style/Header"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/infos_header" />

        <!--title-->
        <TextView
            style="@style/DetailsLabel"
            android:text="@string/title_label" />

        <TextView
            android:id="@+id/details_title"
            style="@style/DetailsValue" />

        <!--author-->
        <TextView
            style="@style/DetailsLabel"
            android:text="@string/author_label" />

        <TextView
            android:id="@+id/details_author"
            style="@style/DetailsValue" />

        <!--date-->
        <TextView
            style="@style/DetailsLabel"
            android:text="@string/date_label" />

        <TextView
            android:id="@+id/details_date"
            style="@style/DetailsValue" />

        <!-- ===== METAS -->
        <TextView
            style="@style/Header"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:contentDescription="metas"
            android:labelFor="@id/edit_notes"
            android:text="@string/metadata_header" />

        <!--published-->
        <TextView
            style="@style/DetailsLabel"
            android:contentDescription="metas"
            android:text="@string/published_label" />

        <TextView
            android:id="@+id/details_metas_pubDate"
            style="@style/DetailsValue"
            android:contentDescription="metas" />

        <!--pages-->
        <TextView
            android:id="@+id/label_metas_pages"
            style="@style/DetailsLabel"
            android:contentDescription="metas"
            android:text="@string/pages_label" />

        <TextView
            android:id="@+id/details_metas_pages"
            style="@style/DetailsValue"
            android:contentDescription="metas" />

        <!--isbn-->
        <TextView
            style="@style/DetailsLabel"
            android:contentDescription="metas"
            android:text="@string/isbn_label" />

        <TextView
            android:id="@+id/details_metas_isbn"
            style="@style/DetailsValue"
            android:contentDescription="metas" />

        <!--gr url -->
        <TextView
            android:id="@+id/details_metas_url"
            style="@style/DetailsValue"
            android:layout_columnSpan="2"
            android:autoLink="web"
            android:contentDescription="metas" />

        <!--notes header-->
        <TextView
            style="@style/Header"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/notes_header" />

        <!--notes field-->
        <TextView
            android:id="@+id/details_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_marginTop="6dp"
            android:paddingBottom="10dp"
            android:textAppearance="@style/AppTheme.TextAppearance" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_columnSpan="2" />
    </GridLayout>

</RelativeLayout>