<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <Button
        android:id="@+id/button_search_goodreads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="search GoodReads" />

    <!--gridlayout with two columns-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:useDefaultMargins="false">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:indeterminate="true"
            android:visibility="visible" />

        <!--infos header-->
        <TextView
            style="@style/Header"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/infos_header" />

        <!--title-->
        <TextView
            style="@style/DetailsLabel"
            android:labelFor="@id/edit_title"
            android:text="@string/title_label" />

        <EditText
            android:id="@+id/edit_title"
            style="@style/DetailsValueEdit"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:nextFocusForward="@id/edit_author"
            android:scrollHorizontally="true">

            <requestFocus />
        </EditText>

        <!--author-->
        <TextView
            style="@style/DetailsLabel"
            android:labelFor="@id/edit_author"
            android:text="@string/author_label" />

        <AutoCompleteTextView
            android:id="@+id/edit_author"
            style="@style/DetailsValueEdit"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:nextFocusForward="@id/edit_date"
            android:scrollHorizontally="true" />

        <!--read on-->
        <TextView
            style="@style/DetailsLabel"
            android:labelFor="@id/edit_date"
            android:text="@string/date_label" />

        <EditText
            android:id="@+id/edit_date"
            style="@style/DetailsValueEdit"
            android:hint="2017-10-01"
            android:inputType="textVisiblePassword"
            android:maxLines="1"
            android:nextFocusForward="@id/edit_pubdate"
            android:scrollHorizontally="true" />

        <TextView
            style="@style/Header"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:labelFor="@id/edit_notes"
            android:text="Metadata" />

        <!--published on-->
        <TextView
            style="@style/DetailsLabel"
            android:labelFor="@id/edit_pubdate"
            android:text="Published" />

        <EditText
            android:id="@+id/edit_pubdate"
            style="@style/DetailsValueEdit"
            android:hint="2017-10-01"
            android:inputType="textVisiblePassword"
            android:maxLines="1"
            android:nextFocusForward="@id/edit_pages"
            android:scrollHorizontally="true" />

        <!--pages-->
        <TextView
            style="@style/DetailsLabel"
            android:labelFor="@id/edit_pages"
            android:text="Pages" />

        <EditText
            android:id="@+id/edit_pages"
            style="@style/DetailsValueEdit"
            android:hint="234"
            android:inputType="number"
            android:maxLines="1"
            android:nextFocusForward="@id/edit_isbn"
            android:scrollHorizontally="true" />

        <!--isbn-->
        <TextView
            style="@style/DetailsLabel"
            android:labelFor="@id/edit_isbn"
            android:text="ISBN" />

        <EditText
            android:id="@+id/edit_isbn"
            style="@style/DetailsValueEdit"
            android:hint="0394519434"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:nextFocusForward="@id/edit_gr_id"
            android:scrollHorizontally="true" />

        <!--goodreads ID-->
        <TextView
            style="@style/DetailsLabel"
            android:labelFor="@id/edit_pages"
            android:text="GoodReads ID" />

        <EditText
            android:id="@+id/edit_gr_id"
            style="@style/DetailsValueEdit"
            android:hint="54120408"
            android:inputType="number"
            android:maxLines="1"
            android:nextFocusForward="@id/edit_notes"
            android:scrollHorizontally="true" />

    </GridLayout>

    <!--notes header-->
    <TextView
        style="@style/Header"
        android:layout_gravity="fill_horizontal"
        android:labelFor="@id/edit_notes"
        android:text="@string/notes_header" />

    <!--notes field-->
    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="textMultiLine|textImeMultiLine" />

    <View
        style="@style/Divider"
        android:layout_marginTop="10dp" />

    <LinearLayout
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical|fill_horizontal"
        android:background="@drawable/bottom_border_gradient"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_edit_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/button_edit_save"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/colorHeaders" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>